--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aerogym 2000</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/index.css">
     <!-- Iconos (copiado del examen 1)-->
     <link rel="stylesheet" href='./assets/icons/remixicon.css'>
     <!-- Favicon generado en la web: https://favicon.io/favicon-generator/-->
