--- a/index.html
+++ b/index.html
@@ -14,18 +14,22 @@
 
 <body>
     <header class="header">
-        <div class="header__logo">Gimnasio</div>
-        <div class="nav">
-            <nav>
-                <ul class="nav__list">
-                    <li class="nav__item"><a href="#" class="nav__link">Cuotas</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Clases/Deportes</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Eventos</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Sobre Nosotros</a></li>
-                </ul>
-            </nav>
-            <a href="#" class="button">Apúntate</a>
-        </div>
+        <section class="container header__content">
+            <div class="header__logo">
+                <img src="./assets/images/LogoGym-noBG.png"> </img>
+            </div>
+            <div class="nav">
+                <nav>
+                    <ul class="nav__list">
+                        <li class="nav__item"><a href="#" class="nav__link">Cuotas</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Clases/Deportes</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Eventos</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Sobre Nosotros</a></li>
+                    </ul>
+                </nav>
+                <a href="#" class="button">Apúntate</a>
+            </div>
+        </section>
     </header>
     
     <main>
@@ -110,29 +114,31 @@
     </main>
 
     <footer class="footer">
-        <div class="footer__column">
-            <h3 class="footer__title">Servicios</h3>
-            <ul class="footer__list">
-                <li class="footer__item"><a href="#" class="footer__link">Entrenamiento Personal</a></li>
-                <li class="footer__item"><a href="#" class="footer__link">Clases Grupales</a></li>
-                <li class="footer__item"><a href="#" class="footer__link">Nutrición</a></li>
-            </ul>
-        </div>
-        <div class="footer__column">
-            <h3 class="footer__title">Enlaces Útiles</h3>
-            <ul class="footer__list">
-                <li class="footer__item"><a href="#" class="footer__link">Términos y Condiciones</a></li>
-                <li class="footer__item"><a href="#" class="footer__link">Política de Privacidad</a></li>
-                <li class="footer__item"><a href="#" class="footer__link">Contacto</a></li>
-            </ul>
-        </div>
-        <div class="footer__column">
-            <h3 class="footer__title">Redes Sociales</h3>
-            <ul class="footer__list">
-                <li class="footer__item"><a href="#" class="footer__link"><i class="ri-facebook-circle-fill"></i> Facebook</a></li>
-                <li class="footer__item"><a href="#" class="footer__link"><i class="ri-instagram-line"></i> Instagram</a></li>
-                <li class="footer__item"><a href="#" class="footer__link"><i class="ri-twitter-x-fill"></i> Twitter</a></li>
-            </ul>
+        <div class="container footer__content">
+            <div class="footer__column">
+                <h3 class="footer__title">Servicios</h3>
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#" class="footer__link">Entrenamiento Personal</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Clases Grupales</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Nutrición</a></li>
+                </ul>
+            </div>
+            <div class="footer__column">
+                <h3 class="footer__title">Enlaces Útiles</h3>
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#" class="footer__link">Términos y Condiciones</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Política de Privacidad</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Contacto</a></li>
+                </ul>
+            </div>
+            <div class="footer__column">
+                <h3 class="footer__title">Redes Sociales</h3>
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#" class="footer__link">Facebook</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Instagram</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Twitter</a></li>
+                </ul>
+            </div>
         </div>
     </footer>
 
