--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
         <h1>Clases de Gimnasio</h1>
         <section>
             <div class="card">
-                <img class="card__image" src="" alt="Pilates">
+                <img class="card__image" src="./assets/images/Pilates.png" alt="Pilates">
                 <div class="card__title">Pilates</div>
                 <p class="card__description">Fortalece el core, mejora la postura y aumenta la flexibilidad mediante ejercicios controlados.</p>
                 <div class="card__footer">Ideal para todos los niveles.</div>
             </div>
     
             <div class="card">
-                <img class="card__image" src="" alt="Spinning">
+                <img class="card__image" src="./assets/images/Spining.png" alt="Spinning">
                 <div class="card__title">Spinning</div>
                 <p class="card__description">Entrenamiento cardiovascular en bicicleta fija al ritmo de la música, ideal para quemar calorías.</p>
                 <div class="card__footer">¡Pedalea al ritmo de la música!</div>
@@ -105,7 +105,7 @@
             </div>
     
             <div class="card">
-                <img class="card__image" src="" alt="Funcional">
+                <img class="card__image" src="./assets/images/Funcional.png" alt="Funcional">
                 <div class="card__title">Funcional</div>
                 <p class="card__description">Entrenamiento que mejora la movilidad, fuerza y resistencia con movimientos naturales y dinámicos.</p>
                 <div class="card__footer">Entrena para la vida diaria.</div>
