--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
             <div class="footer__column">
                 <h3 class="footer__title">Redes Sociales</h3>
                 <ul class="footer__list">
-                    <li class="footer__item"><a href="#" class="footer__link">Facebook</a></li>
-                    <li class="footer__item"><a href="#" class="footer__link">Instagram</a></li>
-                    <li class="footer__item"><a href="#" class="footer__link">Twitter</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link"><i class="ri-facebook-circle-fill"></i> Facebook</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link"><i class="ri-instagram-line"></i> Instagram</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link"><i class="ri-twitter-x-fill"></i> Twitter</a></li>
                 </ul>
             </div>
         </div>
