--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     <main>
         <h1>Tarifas de Gimnasio</h1>
-        <section>
+        <section class='cards'>
             <div class="card">
                 <div class="card__title">MENSUAL</div>
                 <p class="card__days">3 Días/Semana: <span class="card__price">25€</span></p>
@@ -61,7 +61,7 @@
         </section>
     
         <h1>Clases de Gimnasio</h1>
-        <section>
+        <section class='cards'>
             <div class="card">
                 <img class="card__image" src="./assets/images/Pilates.png" alt="Pilates">
                 <div class="card__title">Pilates</div>
