--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
     <main class='main_container'>
 
         <section class='main_banner'>
-
+            <img class='main_banner__image' src='./assets/images/Aerogym-2000-banner.jpg'></img>
+            <h1>Aerogym <span>2000</span></h1>
         </section>
 
-        <h1 class='section_title'>Tarifas de Gimnasio</h1>
+        <h1 class='section__title'>Tarifas de Gimnasio</h1>
 
         <section class='cards'>
             <div class="card">
@@ -66,7 +67,7 @@
             </div>
         </section>
     
-        <h1 class='section_title'>Clases de Gimnasio</h1>
+        <h1 class='section__title'>Clases de Gimnasio</h1>
 
         <section class='cards'>
             <div class="card">
