--- a/index.html
+++ b/index.html
@@ -120,7 +120,30 @@
             </div>
         </section>
 
-
+        <section>
+            <div class="logos">
+                <div class="logos_slide">
+                      <img src="./assets/images/LogoGym-noBG.png" alt="">
+                      <img src="./assets/images/foto2.jpg" alt="">
+                      <img src="./assets/images/Funcional.png" alt="">
+                      <img src="./assets/images/membresia-card-3.jpg" alt="">
+                      <img src="./assets/images/foto3.jpg" alt="">
+                      <img src="./assets/images/foto4.jpg" alt="">
+                      <img src="./assets/images/foto5.jpg" alt="">
+                      <img src="./assets/images/foto1.jpg" alt="">
+                </div>
+                <div class="logos_slide">
+                    <img src="./assets/images/LogoGym-noBG.png" alt="">
+                    <img src="./assets/images/foto2.jpg" alt="">
+                    <img src="./assets/images/Funcional.png" alt="">
+                    <img src="./assets/images/membresia-card-3.jpg" alt="">
+                    <img src="./assets/images/foto3.jpg" alt="">
+                    <img src="./assets/images/foto4.jpg" alt="">
+                    <img src="./assets/images/foto5.jpg" alt="">
+                    <img src="./assets/images/foto1.jpg" alt="">
+                </div>
+            </div>
+        </section>
 
     </main>
 
