--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Aerogym 2000</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/index.css">
-    <!-- Iconos (copiado del examen 1)-->
+    <!-- Iconos -->
     <link rel="stylesheet" href='./assets/icons/remixicon.css'>
     <!-- Favicon generado en la web: https://favicon.io/favicon-generator/-->
     <link rel="icon" href="./assets/images/favicon.ico">
@@ -27,7 +27,7 @@
                         <li class="nav__item"><a href="#" class="nav__link">Sobre Nosotros</a></li>
                     </ul>
                 </nav>
-                <a href="#" class="button">Apúntate</a>
+                <a href="./pages/formulario.html" target="_blank" class="button">Apúntate</a>
             </div>
         </section>
     </header>
@@ -39,7 +39,7 @@
             <h1>Aerogym <span>2000</span></h1>
         </section>
 
-        <h1 class='section__title'>Tarifas de Gimnasio</h1>
+        <h2 class='section__title'>Tarifas de Gimnasio</h2>
 
         <section class='cards'>
             <div class="card">
@@ -67,7 +67,7 @@
             </div>
         </section>
     
-        <h1 class='section__title'>Clases de Gimnasio</h1>
+        <h2 class='section__title'>Clases de Gimnasio</h2>
 
         <section class='cards'>
             <div class="card">
