--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -4,13 +4,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aerogym2000</title>
     <link rel="stylesheet" href="../CSS/formulario.css" />
+    <link rel="stylesheet" href="../CSS/style.css" />
+        <!-- Iconos -->
+        <link rel="stylesheet" href='../assets/icons/remixicon.css'>
+        <!-- Favicon generado en la web: https://favicon.io/favicon-generator/-->
+        <link rel="icon" href="../assets/images/favicon.ico">
+
+
+ 
   </head>
+
   <body>
+    <header class="header">
+      <section class="container header__content">
+          <div class="header__logo">
+              <img src="../assets/images/LogoGym-noBG.png"> </img>
+          </div>
+          <div class="nav">
+              <nav>
+                  <ul class="nav__list">
+                      <li class="nav__item"><a href="#" class="nav__link">Cuotas</a></li>
+                      <li class="nav__item"><a href="#" class="nav__link">Clases/Deportes</a></li>
+                      <li class="nav__item"><a href="#" class="nav__link">Eventos</a></li>
+                      <li class="nav__item"><a href="#" class="nav__link">Sobre Nosotros</a></li>
+                  </ul>
+              </nav>
+              <a href="./pages/formulario.html" target="_blank" class="button">Apúntate</a>
+          </div>
+      </section>
+  </header>
+
     <section class="container">
-      <header class="container__header">
-        <h1 class="container__title">Bienvenido</h1>
-        <p class="container__subtitle">Selecciona una opción para continuar</p>
-      </header>
       <section class="container__forms forms">
         <article class="forms__form forms__form--registro">
           <h2 class="forms__title">Registro</h2>
@@ -58,5 +82,35 @@
         </article>
       </section>
     </section>
+
+    <footer class="footer">
+      <div class="container footer__content">
+          <div class="footer__column">
+              <h3 class="footer__title">Servicios</h3>
+              <ul class="footer__list">
+                  <li class="footer__item"><a href="#" class="footer__link">Entrenamiento Personal</a></li>
+                  <li class="footer__item"><a href="#" class="footer__link">Clases Grupales</a></li>
+                  <li class="footer__item"><a href="#" class="footer__link">Nutrición</a></li>
+              </ul>
+          </div>
+          <div class="footer__column">
+              <h3 class="footer__title">Enlaces Útiles</h3>
+              <ul class="footer__list">
+                  <li class="footer__item"><a href="#" class="footer__link">Términos y Condiciones</a></li>
+                  <li class="footer__item"><a href="#" class="footer__link">Política de Privacidad</a></li>
+                  <li class="footer__item"><a href="#" class="footer__link">Contacto</a></li>
+              </ul>
+          </div>
+          <div class="footer__column">
+              <h3 class="footer__title">Redes Sociales</h3>
+              <ul class="footer__list">
+                  <li class="footer__item"><a href="#" class="footer__link"><i class="ri-facebook-circle-fill"></i> Facebook</a></li>
+                  <li class="footer__item"><a href="#" class="footer__link"><i class="ri-instagram-line"></i> Instagram</a></li>
+                  <li class="footer__item"><a href="#" class="footer__link"><i class="ri-twitter-x-fill"></i> Twitter</a></li>
+              </ul>
+          </div>
+      </div>
+  </footer>
+  <script src="../js/main.js"></script>
   </body>
 </html>
