Corrección formulario.html
Error de enlace corregido

--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -29,7 +29,7 @@
                       <li class="nav__item"><a href="#" class="nav__link">Sobre Nosotros</a></li>
                   </ul>
               </nav>
-              <a href="./pages/formulario.html" target="_blank" class="button">Apúntate</a>
+              <a href="#" class="button">Apúntate</a>
           </div>
       </section>
   </header>
