--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
     <header class="header">
         <section class="container header__content">
-            <div class="header__logo">
+            <aticle class="header__logo">
                 <img src="./assets/images/LogoGym-noBG.png"> </img>
-            </div>
-            <div class="nav">
+            </aticle>
+            <aticle class="nav">
                 <nav>
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#Cuotas" class="nav__link">Cuotas</a></li>
@@ -28,7 +28,7 @@
                     </ul>
                 </nav>
                 <a href="./pages/formulario.html" target="_blank" class="button">Apúntate</a>
-            </div>
+            </aticle>
         </section>
     </header>
 
@@ -44,95 +44,95 @@
         <h2 id="Cuotas" class='section__title'>Tarifas de Gimnasio</h2>
 
         <section class='cards'>
-            <div class="card">
+            <aticle class="card">
                 <h3 class="card__title">MENSUAL</h3>
                 <p class="card__days">3 Días/Semana: <span class="card__price">25€</span></p>
                 <p class="card__days">Todos los Días: <span class="card__price">30€</span></p>
                 <p class="card__description">Acceso a sala de máquinas y sauna gratis.</p>
                 <p class="card__footer">¡Entrena sin límites!</p>
-            </div>
+            </aticle>
 
-            <div class="card">
+            <aticle class="card">
                 <h3 class="card__title">TRIMESTRAL</h3>
                 <p class="card__days">3 Días/Semana: <span class="card__price">70€</span></p>
                 <p class="card__days">Todos los Días: <span class="card__price">80€</span></p>
                 <p class="card__description">Acceso a sala de máquinas y sauna gratis.</p>
                 <p class="card__footer">Más tiempo, más resultados.</p>
-            </div>
+            </aticle>
 
-            <div class="card">
+            <aticle class="card">
                 <h3 class="card__title">SEMESTRAL</h3>
                 <p class="card__days">3 Días/Semana: <span class="card__price">130€</span></p>
                 <p class="card__days">Todos los Días: <span class="card__price">150€</span></p>
                 <p class="card__description">Acceso a sala de máquinas y sauna gratis.</p>
                 <p class="card__footer">Compromiso con tu bienestar.</p>
-            </div>
+            </aticle>
         </section>
 
         <h2 id="Clases" class='section__title'>Clases de Gimnasio</h2>
 
         <section class='cards'>
-            <div class="card">
+            <aticle class="card">
                 <img class="card__image" src="./assets/images/Pilates.png" alt="Pilates">
                 <h3 class="card__title">Pilates</h3>
                 <p class="card__description">Fortalece el core, mejora la postura y aumenta la flexibilidad mediante
                     ejercicios controlados.</p>
                 <p class="card__footer">Ideal para todos los niveles.</p>
-            </div>
+            </aticle>
 
-            <div class="card">
+            <aticle class="card">
                 <img class="card__image" src="./assets/images/Spining.png" alt="Spinning">
                 <h3 class="card__title">Spinning</h3>
                 <p class="card__description">Entrenamiento cardiovascular en bicicleta fija al ritmo de la música, ideal
                     para quemar calorías.</p>
                 <p class="card__footer">¡Pedalea al ritmo de la música!</p>
-            </div>
+            </aticle>
 
-            <div class="card">
+            <aticle class="card">
                 <img class="card__image" src="./assets/images/kung-fu-placeholder.png" alt="Kung-fu">
                 <h3 class="card__title">Kung-fu</h3>
                 <p class="card__description">Arte marcial que combina técnicas de defensa personal, disciplina y
                     desarrollo físico y mental.</p>
                 <p class="card__footer">Desarrolla cuerpo y mente.</p>
-            </div>
+            </aticle>
 
-            <div class="card">
+            <aticle class="card">
                 <img class="card__image" src="./assets/images/body-pump-placeholder.png" alt="Body-pump">
                 <h3 class="card__title">Body-pump</h3>
                 <p class="card__description">Entrenamiento con pesas al ritmo de la música, enfocado en tonificación y
                     fuerza muscular.</p>
                 <p class="card__footer">Tonifica todo tu cuerpo.</p>
-            </div>
+            </aticle>
 
-            <div class="card">
+            <aticle class="card">
                 <img class="card__image" src="./assets/images/karate-placeholder.jpg" alt="Karate">
                 <h3 class="card__title">Karate</h3>
                 <p class="card__description">Disciplina de artes marciales que mejora la fuerza, coordinación,
                     disciplina y autodefensa.</p>
                 <p class="card__footer">Aprende a defenderte con estilo.</p>
-            </div>
+            </aticle>
 
-            <div class="card">
+            <aticle class="card">
                 <img class="card__image" src="./assets/images/Kick-boxing-thai-boxeo.jpg"
                     alt="Kick-boxing - Thai boxeo">
                 <h3 class="card__title">Kick-boxing - Thai boxeo</h3>
                 <p class="card__description">Deportes de combate que combinan golpes de puño y patadas, mejorando la
                     resistencia y agilidad.</p>
                 <p class="card__footer">Mejora tu fuerza y resistencia.</p>
-            </div>
+            </aticle>
 
-            <div class="card">
+            <aticle class="card">
                 <img class="card__image" src="./assets/images/Funcional.png" alt="Funcional">
                 <h3 class="card__title">Funcional</h3>
                 <p class="card__description">Entrenamiento que mejora la movilidad, fuerza y resistencia con movimientos
                     naturales y dinámicos.</p>
                 <p class="card__footer">Entrena para la vida diaria.</p>
-            </div>
+            </aticle>
         </section>
 
         <section>
-            <div class="logos">
-                <div class="logos_slide">
+            <section class="logos">
+                <aticle class="logos_slide">
                     <img src="./assets/images/LogoGym-noBG.png" alt="">
                     <img src="./assets/images/foto2.jpg" alt="">
                     <img src="./assets/images/Funcional.png" alt="">
@@ -141,8 +141,8 @@
                     <img src="./assets/images/foto4.jpg" alt="">
                     <img src="./assets/images/foto5.jpg" alt="">
                     <img src="./assets/images/foto1.jpg" alt="">
-                </div>
-                <div class="logos_slide">
+                </aticle>
+                <aticle class="logos_slide">
                     <img src="./assets/images/LogoGym-noBG.png" alt="">
                     <img src="./assets/images/foto2.jpg" alt="">
                     <img src="./assets/images/Funcional.png" alt="">
@@ -151,31 +151,31 @@
                     <img src="./assets/images/foto4.jpg" alt="">
                     <img src="./assets/images/foto5.jpg" alt="">
                     <img src="./assets/images/foto1.jpg" alt="">
-                </div>
-            </div>
+                </aticle>
+            </section>
         </section>
 
     </main>
 
     <footer class="footer">
-        <div class="container footer__content">
-            <div class="footer__column">
+        <sction class="container footer__content">
+            <aticle class="footer__column">
                 <h3 class="footer__title">Servicios</h3>
                 <ul class="footer__list">
                     <li class="footer__item"><a href="#" class="footer__link">Entrenamiento Personal</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">Clases Grupales</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">Nutrición</a></li>
                 </ul>
-            </div>
-            <div class="footer__column">
+            </aticle>
+            <aticle class="footer__column">
                 <h3 class="footer__title">Enlaces Útiles</h3>
                 <ul class="footer__list">
                     <li class="footer__item"><a href="#" class="footer__link">Términos y Condiciones</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">Política de Privacidad</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">Contacto</a></li>
                 </ul>
-            </div>
-            <div class="footer__column">
+            </aticle>
+            <aticle class="footer__column">
                 <h3 class="footer__title">Redes Sociales</h3>
                 <ul class="footer__list">
                     <li class="footer__item"><a href="#" class="footer__link"><i class="ri-facebook-circle-fill"></i>
@@ -185,8 +185,8 @@
                     <li class="footer__item"><a href="#" class="footer__link"><i class="ri-twitter-x-fill"></i>
                             Twitter</a></li>
                 </ul>
-            </div>
-        </div>
+            </aticle>
+        </sction>
     </footer>
     <script src="./js/main.js"></script>
 </body>
