--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -17,10 +17,10 @@
   <body>
     <header class="header">
       <section class="container header__content">
-          <div class="header__logo">
+          <aticle class="header__logo">
               <img src="../assets/images/LogoGym-noBG.png"> </img>
-          </div>
-          <div class="nav">
+          </aticle>
+          <aticle class="nav">
               <nav>
                   <ul class="nav__list">
                       <li class="nav__item"><a href="#" class="nav__link">Cuotas</a></li>
@@ -30,7 +30,7 @@
                   </ul>
               </nav>
               <a href="#" class="button">Apúntate</a>
-          </div>
+          </aticle>
       </section>
   </header>
 
@@ -84,32 +84,35 @@
     </section>
 
     <footer class="footer">
-      <div class="container footer__content">
-          <div class="footer__column">
-              <h3 class="footer__title">Servicios</h3>
-              <ul class="footer__list">
-                  <li class="footer__item"><a href="#" class="footer__link">Entrenamiento Personal</a></li>
-                  <li class="footer__item"><a href="#" class="footer__link">Clases Grupales</a></li>
-                  <li class="footer__item"><a href="#" class="footer__link">Nutrición</a></li>
-              </ul>
-          </div>
-          <div class="footer__column">
-              <h3 class="footer__title">Enlaces Útiles</h3>
-              <ul class="footer__list">
-                  <li class="footer__item"><a href="#" class="footer__link">Términos y Condiciones</a></li>
-                  <li class="footer__item"><a href="#" class="footer__link">Política de Privacidad</a></li>
-                  <li class="footer__item"><a href="#" class="footer__link">Contacto</a></li>
-              </ul>
-          </div>
-          <div class="footer__column">
-              <h3 class="footer__title">Redes Sociales</h3>
-              <ul class="footer__list">
-                  <li class="footer__item"><a href="#" class="footer__link"><i class="ri-facebook-circle-fill"></i> Facebook</a></li>
-                  <li class="footer__item"><a href="#" class="footer__link"><i class="ri-instagram-line"></i> Instagram</a></li>
-                  <li class="footer__item"><a href="#" class="footer__link"><i class="ri-twitter-x-fill"></i> Twitter</a></li>
-              </ul>
-          </div>
-      </div>
+      <sction class="container footer__content">
+            <aticle class="footer__column">
+                <h3 class="footer__title">Servicios</h3>
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#" class="footer__link">Entrenamiento Personal</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Clases Grupales</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Nutrición</a></li>
+                </ul>
+            </aticle>
+            <aticle class="footer__column">
+                <h3 class="footer__title">Enlaces Útiles</h3>
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#" class="footer__link">Términos y Condiciones</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Política de Privacidad</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Contacto</a></li>
+                </ul>
+            </aticle>
+            <aticle class="footer__column">
+                <h3 class="footer__title">Redes Sociales</h3>
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#" class="footer__link"><i class="ri-facebook-circle-fill"></i>
+                            Facebook</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link"><i class="ri-instagram-line"></i>
+                            Instagram</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link"><i class="ri-twitter-x-fill"></i>
+                            Twitter</a></li>
+                </ul>
+            </aticle>
+        </sction>
   </footer>
   <script src="../js/main.js"></script>
   </body>
