--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 <body>
     <header class="header">
         <section class="container header__content">
-            <aticle class="header__logo">
+            <div class="header__logo">
                 <img src="./assets/images/LogoGym-noBG.png"> </img>
-            </aticle>
-            <aticle class="nav">
+            </div>
+            <div class="nav">
                 <nav>
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#Cuotas" class="nav__link">Cuotas</a></li>
                         <li class="nav__item"><a href="#Clases" class="nav__link">Clases/Deportes</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">Eventos</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">Sobre Nosotros</a></li>
+                        <li class="nav__item"><a href="#Servicios" class="nav__link">Servicios</a></li>
+                        <li class="nav__item"><a href="#Encuentranos" class="nav__link">Sobre Nosotros</a></li>
                     </ul>
                 </nav>
                 <a href="./pages/formulario.html" target="_blank" class="button">Apúntate</a>
-            </aticle>
+            </div>
         </section>
     </header>
 
@@ -44,95 +44,144 @@
         <h2 id="Cuotas" class='section__title'>Tarifas de Gimnasio</h2>
 
         <section class='cards'>
-            <aticle class="card">
+            <div class="card">
                 <h3 class="card__title">MENSUAL</h3>
                 <p class="card__days">3 Días/Semana: <span class="card__price">25€</span></p>
                 <p class="card__days">Todos los Días: <span class="card__price">30€</span></p>
                 <p class="card__description">Acceso a sala de máquinas y sauna gratis.</p>
                 <p class="card__footer">¡Entrena sin límites!</p>
-            </aticle>
+            </div>
 
-            <aticle class="card">
+            <div class="card">
                 <h3 class="card__title">TRIMESTRAL</h3>
                 <p class="card__days">3 Días/Semana: <span class="card__price">70€</span></p>
                 <p class="card__days">Todos los Días: <span class="card__price">80€</span></p>
                 <p class="card__description">Acceso a sala de máquinas y sauna gratis.</p>
                 <p class="card__footer">Más tiempo, más resultados.</p>
-            </aticle>
+            </div>
 
-            <aticle class="card">
+            <div class="card">
                 <h3 class="card__title">SEMESTRAL</h3>
                 <p class="card__days">3 Días/Semana: <span class="card__price">130€</span></p>
                 <p class="card__days">Todos los Días: <span class="card__price">150€</span></p>
                 <p class="card__description">Acceso a sala de máquinas y sauna gratis.</p>
                 <p class="card__footer">Compromiso con tu bienestar.</p>
-            </aticle>
+            </div>
         </section>
 
         <h2 id="Clases" class='section__title'>Clases de Gimnasio</h2>
 
         <section class='cards'>
-            <aticle class="card">
+            <div class="card">
                 <img class="card__image" src="./assets/images/Pilates.png" alt="Pilates">
                 <h3 class="card__title">Pilates</h3>
                 <p class="card__description">Fortalece el core, mejora la postura y aumenta la flexibilidad mediante
                     ejercicios controlados.</p>
                 <p class="card__footer">Ideal para todos los niveles.</p>
-            </aticle>
+            </div>
 
-            <aticle class="card">
+            <div class="card">
                 <img class="card__image" src="./assets/images/Spining.png" alt="Spinning">
                 <h3 class="card__title">Spinning</h3>
                 <p class="card__description">Entrenamiento cardiovascular en bicicleta fija al ritmo de la música, ideal
                     para quemar calorías.</p>
                 <p class="card__footer">¡Pedalea al ritmo de la música!</p>
-            </aticle>
+            </div>
 
-            <aticle class="card">
+            <div class="card">
                 <img class="card__image" src="./assets/images/kung-fu-placeholder.png" alt="Kung-fu">
                 <h3 class="card__title">Kung-fu</h3>
                 <p class="card__description">Arte marcial que combina técnicas de defensa personal, disciplina y
                     desarrollo físico y mental.</p>
                 <p class="card__footer">Desarrolla cuerpo y mente.</p>
-            </aticle>
+            </div>
 
-            <aticle class="card">
+            <div class="card">
                 <img class="card__image" src="./assets/images/body-pump-placeholder.png" alt="Body-pump">
                 <h3 class="card__title">Body-pump</h3>
                 <p class="card__description">Entrenamiento con pesas al ritmo de la música, enfocado en tonificación y
                     fuerza muscular.</p>
                 <p class="card__footer">Tonifica todo tu cuerpo.</p>
-            </aticle>
+            </div>
 
-            <aticle class="card">
+            <div class="card">
                 <img class="card__image" src="./assets/images/karate-placeholder.jpg" alt="Karate">
                 <h3 class="card__title">Karate</h3>
                 <p class="card__description">Disciplina de artes marciales que mejora la fuerza, coordinación,
                     disciplina y autodefensa.</p>
                 <p class="card__footer">Aprende a defenderte con estilo.</p>
-            </aticle>
+            </div>
 
-            <aticle class="card">
+            <div class="card">
                 <img class="card__image" src="./assets/images/Kick-boxing-thai-boxeo.jpg"
                     alt="Kick-boxing - Thai boxeo">
                 <h3 class="card__title">Kick-boxing - Thai boxeo</h3>
                 <p class="card__description">Deportes de combate que combinan golpes de puño y patadas, mejorando la
                     resistencia y agilidad.</p>
                 <p class="card__footer">Mejora tu fuerza y resistencia.</p>
-            </aticle>
+            </div>
 
-            <aticle class="card">
+            <div class="card">
                 <img class="card__image" src="./assets/images/Funcional.png" alt="Funcional">
                 <h3 class="card__title">Funcional</h3>
                 <p class="card__description">Entrenamiento que mejora la movilidad, fuerza y resistencia con movimientos
                     naturales y dinámicos.</p>
                 <p class="card__footer">Entrena para la vida diaria.</p>
-            </aticle>
+            </div>
+        </section>
+
+        <h2 id="Servicios" class='section__title'>Servicios</h2>
+
+        <section class="servicios__container">
+            <article class="servicio__container">
+                <i class="ri-police-badge-line"></i>
+                <p class="servicio__tittle">Policía Local y Nacional</p>
+                <p class="servicio__description">Entrenamiento enfocado a las pruebas físicas de acceso</p>
+            </article>
+
+            <article class="servicio__container servicio__container__separadores">
+                <i class="ri-fire-line"></i>
+                <p class="servicio__tittle">Bomberos</p>
+                <p class="servicio__description">Entrenamiento enfocado a las pruebas físicas de acceso</p>
+            </article>
+
+            <article class="servicio__container">
+                <i class="ri-shirt-fill"></i>
+                <p class="servicio__tittle">Guardia Civil</p>
+                <p class="servicio__description">Entrenamiento enfocado a las pruebas físicas de acceso</p>
+            </article>
+
+            <article class="servicio__container">
+                <i class="ri-mental-health-line"></i>
+                <p class="servicio__tittle">Rehabilitación</p>
+                <p class="servicio__description">Tablas de ejercicios para la correcta recuperación física</p>
+            </article>
+
+            <article class="servicio__container servicio__container__separadores">
+                <i class="ri-service-line"></i>
+                <p class="servicio__tittle">Adelgazamiento</p>
+                <p class="servicio__description">Programas de pérdida calórica intensiva</p>
+            </article>
+
+            <article class="servicio__container">
+                <i class="ri-contacts-line"></i>
+                <p class="servicio__tittle">Entrenamientos Personales</p>
+                <p class="servicio__description">Guía y asesoramiento de nuestro personal cualificado</p>
+            </article>
+        </section>
+
+        <section class="map-section">
+            <article class="map-sectionarticle">
+                <h2 id="Encuentranos" class="map-sectiontitle">Encuéntranos</h2>
+                <iframe class="map-sectioniframe"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d849.1243840648016!2d-4.84040116384783!3d39.96280628124974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd401c77dbc75bbf%3A0x84645da4918a8af8!2sAerogym%202000!5e1!3m2!1ses!2ses!4v1745748595471!5m2!1ses!2ses"
+                    allowfullscreen loading="lazy"></iframe>
+            </article>
         </section>
 
         <section>
-            <section class="logos">
-                <aticle class="logos_slide">
+            <div class="logos">
+                <div class="logos_slide">
                     <img src="./assets/images/LogoGym-noBG.png" alt="">
                     <img src="./assets/images/foto2.jpg" alt="">
                     <img src="./assets/images/Funcional.png" alt="">
@@ -141,8 +190,8 @@
                     <img src="./assets/images/foto4.jpg" alt="">
                     <img src="./assets/images/foto5.jpg" alt="">
                     <img src="./assets/images/foto1.jpg" alt="">
-                </aticle>
-                <aticle class="logos_slide">
+                </div>
+                <div class="logos_slide">
                     <img src="./assets/images/LogoGym-noBG.png" alt="">
                     <img src="./assets/images/foto2.jpg" alt="">
                     <img src="./assets/images/Funcional.png" alt="">
@@ -151,31 +200,31 @@
                     <img src="./assets/images/foto4.jpg" alt="">
                     <img src="./assets/images/foto5.jpg" alt="">
                     <img src="./assets/images/foto1.jpg" alt="">
-                </aticle>
-            </section>
+                </div>
+            </div>
         </section>
 
     </main>
 
     <footer class="footer">
-        <sction class="container footer__content">
-            <aticle class="footer__column">
+        <div class="container footer__content">
+            <div class="footer__column">
                 <h3 class="footer__title">Servicios</h3>
                 <ul class="footer__list">
                     <li class="footer__item"><a href="#" class="footer__link">Entrenamiento Personal</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">Clases Grupales</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">Nutrición</a></li>
                 </ul>
-            </aticle>
-            <aticle class="footer__column">
+            </div>
+            <div class="footer__column">
                 <h3 class="footer__title">Enlaces Útiles</h3>
                 <ul class="footer__list">
                     <li class="footer__item"><a href="#" class="footer__link">Términos y Condiciones</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">Política de Privacidad</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">Contacto</a></li>
                 </ul>
-            </aticle>
-            <aticle class="footer__column">
+            </div>
+            <div class="footer__column">
                 <h3 class="footer__title">Redes Sociales</h3>
                 <ul class="footer__list">
                     <li class="footer__item"><a href="#" class="footer__link"><i class="ri-facebook-circle-fill"></i>
@@ -185,8 +234,8 @@
                     <li class="footer__item"><a href="#" class="footer__link"><i class="ri-twitter-x-fill"></i>
                             Twitter</a></li>
                 </ul>
-            </aticle>
-        </sction>
+            </div>
+        </div>
     </footer>
     <script src="./js/main.js"></script>
 </body>
